--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true, 
     "isolatedModules": true,
-    "outDir": "dist",
+    "outDir": "./dist",
     "rootDir": "./src",
   },
   "include": ["src/**/*.ts"],
