--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node src/app.ts",
-    "test": "jest"
+    "test": "jest --verbose --runInBand"
   },
   "author": "Juan Manuel Ticona Pacheco",
   "license": "ISC",
